[gd_scene load_steps=22 format=3 uid="uid://diueuwbtv4w82"]

[ext_resource type="Script" uid="uid://cws7m480lxvaf" path="res://Scripts/_Debug/DebugUI.gd" id="1_i47c0"]
[ext_resource type="Script" uid="uid://c3qf8gpvlk6is" path="res://Scripts/CCC/Camera/CameraController.gd" id="2_i47c0"]
[ext_resource type="Script" uid="uid://buerbm15a2ykm" path="res://Scripts/CCC/Character/CharacterController.gd" id="3_2ojfn"]
[ext_resource type="Script" uid="uid://deibi5xmtfs1h" path="res://Scripts/Character/CharacterStateMachine.gd" id="4_dohcx"]
[ext_resource type="Script" uid="uid://mwfti1hv45ue" path="res://Scripts/Character/States/StateIdle.gd" id="5_jkhd2"]
[ext_resource type="Script" uid="uid://1uqst38ejbn3" path="res://Scripts/Character/States/StateAirborne.gd" id="6_v1ubw"]
[ext_resource type="Script" uid="uid://c7v6qfkst2sfh" path="res://Scripts/Character/States/StateJumping.gd" id="7_qo6m7"]
[ext_resource type="Script" uid="uid://dvxh1oyh11gby" path="res://Scripts/Character/States/StateLanding.gd" id="8_5otox"]
[ext_resource type="Script" uid="uid://dg7vpc6xymvpp" path="res://Scripts/Character/States/StateRunning.gd" id="9_bxgjt"]
[ext_resource type="Script" uid="uid://chw8f4cb3xd47" path="res://Scripts/Character/States/StateWalking.gd" id="10_tsdtt"]
[ext_resource type="Script" uid="uid://ceg85p1hqrfpk" path="res://Scripts/Controllers/AnimationManager.gd" id="11_3qd0h"]
[ext_resource type="Script" uid="uid://b14olm3bctnn0" path="res://Scripts/CCC/Control/InputController.gd" id="12_i47c0"]
[ext_resource type="Script" uid="uid://cmwqi3p5fw7bd" path="res://Scripts/Character/MovementManager.gd" id="14_34nj4"]
[ext_resource type="Script" uid="uid://c63imyupotuj1" path="res://Scripts/CCC/Control/ClickNavigationComponent.gd" id="16_5wr16"]
[ext_resource type="Script" uid="uid://bqw3xo0kgqhjk" path="res://Scripts/_Debug/CharacterDebugHelper.gd" id="17_ok2nx"]
[ext_resource type="PackedScene" uid="uid://cbx0rhk665pls" path="res://Assets/ps_character_gurl.tscn" id="18_o63we"]
[ext_resource type="Script" uid="uid://b48hch6c4vdei" path="res://Scripts/CCC/Control/KeyboardInput.gd" id="19_jiddn"]
[ext_resource type="PackedScene" uid="uid://bsprrm672tx2s" path="res://MARKER.tscn" id="19_qtd55"]
[ext_resource type="Script" uid="uid://bxfkrnd06vmmo" path="res://Scripts/CCC/Control/GamepadComponent.gd" id="20_dohcx"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uyn8p"]
radius = 0.01

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_odeog"]
radius = 0.287885
height = 1.70464

[node name="CCC" type="Node3D"]

[node name="DebugUI" type="Control" parent="." node_paths=PackedStringArray("debug_label", "character")]
process_mode = 4
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i47c0")
debug_label = NodePath("DebugLabel")
character = NodePath("../CHARACTER")
show_performance_info = true
metadata/_edit_use_anchors_ = true

[node name="DebugLabel" type="Label" parent="DebugUI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
metadata/_edit_use_anchors_ = true

[node name="CAMERARIG" type="Node3D" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("2_i47c0")
target_node = NodePath("../CHARACTER")

[node name="SpringArm3D" type="SpringArm3D" parent="CAMERARIG"]
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="CAMERARIG/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="CHARACTER" type="CharacterBody3D" parent="."]
collision_layer = 2
slide_on_ceiling = false
script = ExtResource("3_2ojfn")

[node name="InputController" type="Node" parent="CHARACTER"]
script = ExtResource("12_i47c0")

[node name="KeyboardInput" type="Node" parent="CHARACTER"]
script = ExtResource("19_jiddn")

[node name="ClickNavigationComponent" type="Node" parent="CHARACTER" node_paths=PackedStringArray("character", "camera", "destination_marker")]
script = ExtResource("16_5wr16")
character = NodePath("..")
camera = NodePath("../../CAMERARIG/SpringArm3D/Camera3D")
destination_marker = NodePath("../../CONTROL/CURSOR")

[node name="CharacterStateMachine" type="Node" parent="CHARACTER" node_paths=PackedStringArray("state_nodes")]
script = ExtResource("4_dohcx")
state_nodes = [NodePath("Idle"), NodePath("Airborne"), NodePath("Jumping"), NodePath("Running"), NodePath("Walking"), NodePath("Landing")]

[node name="Idle" type="Node" parent="CHARACTER/CharacterStateMachine"]
script = ExtResource("5_jkhd2")

[node name="Airborne" type="Node" parent="CHARACTER/CharacterStateMachine"]
script = ExtResource("6_v1ubw")

[node name="Jumping" type="Node" parent="CHARACTER/CharacterStateMachine"]
script = ExtResource("7_qo6m7")

[node name="Landing" type="Node" parent="CHARACTER/CharacterStateMachine"]
script = ExtResource("8_5otox")

[node name="Running" type="Node" parent="CHARACTER/CharacterStateMachine"]
script = ExtResource("9_bxgjt")

[node name="Walking" type="Node" parent="CHARACTER/CharacterStateMachine"]
script = ExtResource("10_tsdtt")

[node name="AnimationManager" type="Node" parent="CHARACTER" node_paths=PackedStringArray("animation_tree")]
script = ExtResource("11_3qd0h")
animation_tree = NodePath("../PS_Character_Gurl/AnimationTree")

[node name="MovementManager" type="Node" parent="CHARACTER"]
script = ExtResource("14_34nj4")

[node name="GamepadComponent" type="Node" parent="CHARACTER"]
script = ExtResource("20_dohcx")

[node name="CharacterDebugHelper" type="Node" parent="CHARACTER"]
script = ExtResource("17_ok2nx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CHARACTER"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_uyn8p")

[node name="PS_Character_Gurl" parent="CHARACTER" instance=ExtResource("18_o63we")]

[node name="AnimationTree" parent="CHARACTER/PS_Character_Gurl" index="2"]
parameters/Move/blend_position = -0.844419

[node name="CollisionShape3D" type="CollisionShape3D" parent="CHARACTER"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.853688, 0)
shape = SubResource("CapsuleShape3D_odeog")

[node name="CONTROL" type="Node3D" parent="."]

[node name="CURSOR" parent="CONTROL" instance=ExtResource("19_qtd55")]

[editable path="CHARACTER/PS_Character_Gurl"]
